--- a/OpenCart/src/test/resources/config.properties
+++ b/OpenCart/src/test/resources/config.properties
@@ -1,4 +1,4 @@
-username=harshp.6293@gmail.com
-password=Opencart123$
+username=abc@gmail.com
+password=Opencart456
 baseurl=https://www.opencart.com/
 browser=chrome
