--- a/OpenCart/pom.xml
+++ b/OpenCart/pom.xml
@@ -5,6 +5,11 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <dependencies>
+  <dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <version>8.0.32</version>
+</dependency>
   
 <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
